--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     <footer class="pricing" aria-label="pricing section"  >
         <div class="container">
             <div class="pricing__content">
-                <h2 class="pricing__title">Alivio</h2>
+                <h2 class="pricing__title">Alivio2</h2>
                 <nav class="pricing__nav">
                     <ul class="pricing__nav-list">
                         <li class="pricing_nav-item">
